--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,14 @@
         android:layout_height="wrap_content"
         app:cycleDuration="5000"
         app:cycleDuration2="8000"
-        app:drawMode="sin"
+        app:drawMode="bezier"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:moveDirection="left"
         app:startAnim="true"
         app:waterLineHeight="120dp"
-        app:waveAmplitude="20dp"
+        app:waveAmplitude="15dp"
         app:waveAmplitude2="10dp"
         app:waveColor="#88afb8ff"
         app:waveColor2="#e2c8ff"
