--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         app:cycleDuration="5000"
         app:cycleDuration2="8000"
-        app:drawMode="bezier"
+        app:drawMode="sin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,9 +21,10 @@
         app:waveAmplitude2="15dp"
         app:waveColor="#88afb8ff"
         app:waveColor2="#e2c8ff"
-        app:waveLengthPercent="2"
-        app:waveDefOffsetPercent2="-0.25"
         app:waveCount="2"
+        app:waveDefOffsetPercent2="-0.25"
+        app:waveLength2="300dp"
+        app:waveLengthPercent="0.6"
         app:waveLocation="top" />
 
     <Button
