--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,24 @@
         android:id="@+id/wave_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cycleDuration="5000"
-        app:cycleDuration2="8000"
-        app:drawMode="sin"
+        app:cycleDuration="4000"
+        app:cycleDuration2="5000"
+        app:drawMode="bezier"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:moveDirection="left"
         app:startAnim="false"
-        app:waterLevelHeight="120dp"
-        app:waveAmplitude="15dp"
-        app:waveAmplitude2="15dp"
+        app:waterLevelHeight="150dp"
+        app:waveAmplitude="10dp"
+        app:waveAmplitude2="8dp"
         app:waveColor="#88afb8ff"
         app:waveColor2="#e2c8ff"
+        app:waveLength="300dp"
+        app:waveLengthPercent2="0.8"
+        app:waveDefOffset="20dp"
+        app:waveDefOffsetPercent2="0.3"
         app:waveCount="2"
-        app:waveDefOffsetPercent2="-0.25"
-        app:waveLength2="300dp"
-        app:waveLengthPercent="0.6"
         app:waveLocation="top" />
 
     <Button
